<resources>
    <string name="app_name">PKPMobile</string>
    <string name="previous_wagon">Previous</string>
    <string name="next_wagon">Next</string>
    <string name="wagon">Wagon:</string>
    <string name="search">Search</string>
    <string name="arrival">Arrival</string>
    <string name="departure">departure</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="blick_code">Blick code:</string>
    <string name="confirm">Pay</string>
    <string name="payment_has_been_succesfully_processed">Payment has been succesfully processed.</string>

</resources>
