<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.FindConnections" tools:layout_editor_absoluteY="81dp">

    <ImageView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"
            android:id="@+id/pkpLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

    <TextView

            android:layout_marginTop="40dp"
            android:text="@string/departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/departureLabel"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/pkpLogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <AutoCompleteTextView
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/departureLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:id="@+id/departureInput"
            android:singleLine="true"
            android:imeOptions="actionNext"




            android:hint="@string/departure"/>

    <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/departureInput"
            android:layout_marginTop="10dp"
            android:text="@string/arrival"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arrivalLabel"

    />
    <AutoCompleteTextView
            android:textAlignment="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/arrivalLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/arrivalInput"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:hint="@string/arrival"/>

    <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/dateTextView"
            app:layout_constraintTop_toBottomOf="@id/timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:ems="10"
            tools:layout_editor_absoluteY="200dp" android:id="@+id/timeTextView"
            android:singleLine="false" tools:layout_editor_absoluteX="8dp"/>
    <TextView
            app:layout_constraintTop_toBottomOf="@id/dateLabel"
            app:layout_constraintLeft_toRightOf="@id/timeTextView"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:ems="10"
            android:id="@+id/dateTextView" tools:layout_editor_absoluteX="151dp"/>
    <TextView
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:text="@string/time"
            app:layout_constraintBottom_toTopOf="@id/timeTextView"
            app:layout_constraintLeft_toLeftOf="@id/timeTextView"
            app:layout_constraintRight_toRightOf="@id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeLabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/arrivalInput"
    />
    <TextView

            android:text="@string/date"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="@id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="@id/dateTextView"
            app:layout_constraintLeft_toRightOf="@id/timeLabel"
            android:id="@+id/dateLabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/arrivalInput"/>
    <Button style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateTextView"
            android:text="@string/search"
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            android:id="@+id/searchButton"
            app:layout_constraintHorizontal_bias="0.456"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline" app:layout_constraintGuide_end="315dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="251dp" android:id="@+id/guideline2"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="184dp" android:id="@+id/guideline3"/>
</androidx.constraintlayout.widget.ConstraintLayout>